<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/weekday"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/weekday"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="95dp" />

    <EditText
        android:id="@+id/delivery_time"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/deliveryTime"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="161dp" />

    <EditText
        android:id="@+id/next_delivery"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nextDelivery"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="302dp" />

    <Button
        android:id="@+id/saveAssignment"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:onClick="addAssignment"
        android:text="@string/save"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="376dp" />

    <EditText
        android:id="@+id/delivery_type"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/deliveryType"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="234dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:text="Add New Assignment"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="16dp" />


</android.support.constraint.ConstraintLayout>