<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/weekday"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/weekday"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/delivery_time"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/deliveryTime"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@+id/weekday"
        app:layout_constraintTop_toBottomOf="@+id/weekday" />

    <EditText
        android:id="@+id/delivery_type"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/deliveryType"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@+id/delivery_time"
        app:layout_constraintTop_toBottomOf="@+id/delivery_time" />

    <EditText
        android:id="@+id/next_delivery"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nextDelivery"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@+id/delivery_type"
        app:layout_constraintTop_toBottomOf="@+id/delivery_type" />

    <Button
        android:id="@+id/saveAssignment"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:onClick="addAssignment"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="-46dp"
        app:layout_constraintLeft_toLeftOf="@+id/next_delivery" />

</android.support.constraint.ConstraintLayout>