<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:id="@+id/course_name"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/courseName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/course_code"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/courseCode"
        app:layout_constraintTop_toBottomOf="@+id/course_name"
        tools:layout_constraintTop_creator="1"
        android:layout_marginLeft="-8dp"
        app:layout_constraintLeft_toLeftOf="@+id/course_name" />

    <Button
        android:id="@+id/saveCourse"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:onClick="addCourse"
        android:text="@string/save"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/course_code"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

</android.support.constraint.ConstraintLayout>